# az-ai-kickstarter

./: .gitignore  README.md  azure.yaml  bicepconfig.json
doc/: ADAPTATIONS.md
doc/decisions/: 0004-use-azure-container-apps-for-hosting.md  0006-merge-frontend-and-backend.md
infra/: README.md  deployments.yaml  main.bicep  main.parameters.json
infra/hooks/: postprovision.sh  predown.ps1  predown.sh  preprovision.ps1  preprovision.sh
infra/modules/: app.bicep
infra/modules/ai/: cognitiveservices.bicep  hub.bicep  project.bicep
infra/modules/app/: container-apps-auth.bicep  container-apps.bicep  container-registry.bicep  fetch-container-image.bicep
src/backend/: app.py  pyproject.toml  sample.env  ui.py
src/backend/patterns/: debate.py
src/backend/utils/: util.py
src/frontend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  ui.py
src/frontend/ui/: ui.py
src/frontend/ui/.chainlit/: config.toml
src/frontend/utils/: util.py
